// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders approved correctly 1`] = `
<withPropsOnChange(Card)
  className="ModerateCard-root"
  data-testid="moderate-comment-comment-id"
>
  <ForwardRef(forwardRef)>
    <div
      className="ModerateCard-mainContainer"
    >
      <div
        className="ModerateCard-topBar"
      >
        <ForwardRef(forwardRef)
          alignItems="center"
        >
          <ForwardRef(forwardRef)
            className="ModerateCard-username"
            onClick={[Function]}
          >
            <Username>
              Theon
            </Username>
          </ForwardRef(forwardRef)>
          <Timestamp
            className="ModerateCard-timestamp"
            toggleAbsolute={true}
          >
            2018-11-29T16:01:51.897Z
          </Timestamp>
          <FeatureButton
            enabled={true}
            featured={false}
            onClick={[Function]}
          />
        </ForwardRef(forwardRef)>
      </div>
      <CommentContent
        bannedWords={
          Array [
            "banned",
          ]
        }
        className="ModerateCard-content"
        suspectWords={
          Array [
            "suspect",
          ]
        }
      >
        content
      </CommentContent>
      <div
        className="ModerateCard-footer"
      >
        <ForwardRef(forwardRef)>
          <div>
            <Localized
              id="moderate-comment-viewContext"
            >
              <withPropsOnChange(TextLinkProps)
                className="ModerateCard-link"
                href="http://localhost/comment"
                target="_blank"
              >
                View Context
              </withPropsOnChange(TextLinkProps)>
            </Localized>
          </div>
          <Relay(MarkersContainer)
            comment={Object {}}
            onUsernameClick={[Function]}
            settings={Object {}}
          />
        </ForwardRef(forwardRef)>
      </div>
    </div>
    <div
      className="ModerateCard-separator ModerateCard-ruledSeparator"
    />
    <ForwardRef(forwardRef)
      alignItems="center"
      className="ModerateCard-aside ModerateCard-asideWithoutReplyTo"
      direction="column"
      itemGutter={true}
    >
      <Localized
        id="moderate-comment-decision"
      >
        <div
          className="ModerateCard-decision"
        >
          DECISION
        </div>
      </Localized>
      <ForwardRef(forwardRef)
        itemGutter={true}
      >
        <RejectButton
          className=""
          disabled={false}
          invert={false}
          onClick={[Function]}
        />
        <ApproveButton
          className=""
          disabled={true}
          invert={true}
          onClick={[Function]}
        />
      </ForwardRef(forwardRef)>
    </ForwardRef(forwardRef)>
  </ForwardRef(forwardRef)>
</withPropsOnChange(Card)>
`;

exports[`renders correctly 1`] = `
<withPropsOnChange(Card)
  className="ModerateCard-root"
  data-testid="moderate-comment-comment-id"
>
  <ForwardRef(forwardRef)>
    <div
      className="ModerateCard-mainContainer"
    >
      <div
        className="ModerateCard-topBar"
      >
        <ForwardRef(forwardRef)
          alignItems="center"
        >
          <ForwardRef(forwardRef)
            className="ModerateCard-username"
            onClick={[Function]}
          >
            <Username>
              Theon
            </Username>
          </ForwardRef(forwardRef)>
          <Timestamp
            className="ModerateCard-timestamp"
            toggleAbsolute={true}
          >
            2018-11-29T16:01:51.897Z
          </Timestamp>
          <FeatureButton
            enabled={true}
            featured={false}
            onClick={[Function]}
          />
        </ForwardRef(forwardRef)>
      </div>
      <CommentContent
        bannedWords={
          Array [
            "banned",
          ]
        }
        className="ModerateCard-content"
        suspectWords={
          Array [
            "suspect",
          ]
        }
      >
        content
      </CommentContent>
      <div
        className="ModerateCard-footer"
      >
        <ForwardRef(forwardRef)>
          <div>
            <Localized
              id="moderate-comment-viewContext"
            >
              <withPropsOnChange(TextLinkProps)
                className="ModerateCard-link"
                href="http://localhost/comment"
                target="_blank"
              >
                View Context
              </withPropsOnChange(TextLinkProps)>
            </Localized>
          </div>
          <Relay(MarkersContainer)
            comment={Object {}}
            onUsernameClick={[Function]}
            settings={Object {}}
          />
        </ForwardRef(forwardRef)>
      </div>
    </div>
    <div
      className="ModerateCard-separator ModerateCard-ruledSeparator"
    />
    <ForwardRef(forwardRef)
      alignItems="center"
      className="ModerateCard-aside ModerateCard-asideWithoutReplyTo"
      direction="column"
      itemGutter={true}
    >
      <Localized
        id="moderate-comment-decision"
      >
        <div
          className="ModerateCard-decision"
        >
          DECISION
        </div>
      </Localized>
      <ForwardRef(forwardRef)
        itemGutter={true}
      >
        <RejectButton
          className=""
          disabled={false}
          invert={false}
          onClick={[Function]}
        />
        <ApproveButton
          className=""
          disabled={false}
          invert={false}
          onClick={[Function]}
        />
      </ForwardRef(forwardRef)>
    </ForwardRef(forwardRef)>
  </ForwardRef(forwardRef)>
</withPropsOnChange(Card)>
`;

exports[`renders dangling correctly 1`] = `
<withPropsOnChange(Card)
  className="ModerateCard-root ModerateCard-dangling"
  data-testid="moderate-comment-comment-id"
>
  <ForwardRef(forwardRef)>
    <div
      className="ModerateCard-mainContainer"
    >
      <div
        className="ModerateCard-topBar"
      >
        <ForwardRef(forwardRef)
          alignItems="center"
        >
          <ForwardRef(forwardRef)
            className="ModerateCard-username"
            onClick={[Function]}
          >
            <Username>
              Theon
            </Username>
          </ForwardRef(forwardRef)>
          <Timestamp
            className="ModerateCard-timestamp"
            toggleAbsolute={true}
          >
            2018-11-29T16:01:51.897Z
          </Timestamp>
          <FeatureButton
            enabled={true}
            featured={false}
            onClick={[Function]}
          />
        </ForwardRef(forwardRef)>
      </div>
      <CommentContent
        bannedWords={
          Array [
            "banned",
          ]
        }
        className="ModerateCard-content"
        suspectWords={
          Array [
            "suspect",
          ]
        }
      >
        content
      </CommentContent>
      <div
        className="ModerateCard-footer"
      >
        <ForwardRef(forwardRef)>
          <div>
            <Localized
              id="moderate-comment-viewContext"
            >
              <withPropsOnChange(TextLinkProps)
                className="ModerateCard-link"
                href="http://localhost/comment"
                target="_blank"
              >
                View Context
              </withPropsOnChange(TextLinkProps)>
            </Localized>
          </div>
          <Relay(MarkersContainer)
            comment={Object {}}
            onUsernameClick={[Function]}
            settings={Object {}}
          />
        </ForwardRef(forwardRef)>
      </div>
    </div>
    <div
      className="ModerateCard-separator ModerateCard-ruledSeparator"
    />
    <ForwardRef(forwardRef)
      alignItems="center"
      className="ModerateCard-aside ModerateCard-asideWithoutReplyTo"
      direction="column"
      itemGutter={true}
    >
      <Localized
        id="moderate-comment-decision"
      >
        <div
          className="ModerateCard-decision"
        >
          DECISION
        </div>
      </Localized>
      <ForwardRef(forwardRef)
        itemGutter={true}
      >
        <RejectButton
          className=""
          disabled={true}
          invert={false}
          onClick={[Function]}
        />
        <ApproveButton
          className=""
          disabled={true}
          invert={false}
          onClick={[Function]}
        />
      </ForwardRef(forwardRef)>
    </ForwardRef(forwardRef)>
  </ForwardRef(forwardRef)>
</withPropsOnChange(Card)>
`;

exports[`renders rejected correctly 1`] = `
<withPropsOnChange(Card)
  className="ModerateCard-root"
  data-testid="moderate-comment-comment-id"
>
  <ForwardRef(forwardRef)>
    <div
      className="ModerateCard-mainContainer"
    >
      <div
        className="ModerateCard-topBar"
      >
        <ForwardRef(forwardRef)
          alignItems="center"
        >
          <ForwardRef(forwardRef)
            className="ModerateCard-username"
            onClick={[Function]}
          >
            <Username>
              Theon
            </Username>
          </ForwardRef(forwardRef)>
          <Timestamp
            className="ModerateCard-timestamp"
            toggleAbsolute={true}
          >
            2018-11-29T16:01:51.897Z
          </Timestamp>
          <FeatureButton
            enabled={true}
            featured={false}
            onClick={[Function]}
          />
        </ForwardRef(forwardRef)>
      </div>
      <CommentContent
        bannedWords={
          Array [
            "banned",
          ]
        }
        className="ModerateCard-content"
        suspectWords={
          Array [
            "suspect",
          ]
        }
      >
        content
      </CommentContent>
      <div
        className="ModerateCard-footer"
      >
        <ForwardRef(forwardRef)>
          <div>
            <Localized
              id="moderate-comment-viewContext"
            >
              <withPropsOnChange(TextLinkProps)
                className="ModerateCard-link"
                href="http://localhost/comment"
                target="_blank"
              >
                View Context
              </withPropsOnChange(TextLinkProps)>
            </Localized>
          </div>
          <Relay(MarkersContainer)
            comment={Object {}}
            onUsernameClick={[Function]}
            settings={Object {}}
          />
        </ForwardRef(forwardRef)>
      </div>
    </div>
    <div
      className="ModerateCard-separator ModerateCard-ruledSeparator"
    />
    <ForwardRef(forwardRef)
      alignItems="center"
      className="ModerateCard-aside ModerateCard-asideWithoutReplyTo"
      direction="column"
      itemGutter={true}
    >
      <Localized
        id="moderate-comment-decision"
      >
        <div
          className="ModerateCard-decision"
        >
          DECISION
        </div>
      </Localized>
      <ForwardRef(forwardRef)
        itemGutter={true}
      >
        <RejectButton
          className=""
          disabled={true}
          invert={true}
          onClick={[Function]}
        />
        <ApproveButton
          className=""
          disabled={false}
          invert={false}
          onClick={[Function]}
        />
      </ForwardRef(forwardRef)>
    </ForwardRef(forwardRef)>
  </ForwardRef(forwardRef)>
</withPropsOnChange(Card)>
`;

exports[`renders reply correctly 1`] = `
<withPropsOnChange(Card)
  className="ModerateCard-root"
  data-testid="moderate-comment-comment-id"
>
  <ForwardRef(forwardRef)>
    <div
      className="ModerateCard-mainContainer"
    >
      <div
        className="ModerateCard-topBar"
      >
        <ForwardRef(forwardRef)
          alignItems="center"
        >
          <ForwardRef(forwardRef)
            className="ModerateCard-username"
            onClick={[Function]}
          >
            <Username>
              Theon
            </Username>
          </ForwardRef(forwardRef)>
          <Timestamp
            className="ModerateCard-timestamp"
            toggleAbsolute={true}
          >
            2018-11-29T16:01:51.897Z
          </Timestamp>
          <FeatureButton
            enabled={true}
            featured={false}
            onClick={[Function]}
          />
        </ForwardRef(forwardRef)>
        <div>
          <ForwardRef(forwardRef)
            className="ModerateCard-username"
            onClick={[Function]}
          >
            <InReplyTo>
              Julian
            </InReplyTo>
          </ForwardRef(forwardRef)>
        </div>
      </div>
      <CommentContent
        bannedWords={
          Array [
            "banned",
          ]
        }
        className="ModerateCard-content"
        suspectWords={
          Array [
            "suspect",
          ]
        }
      >
        content
      </CommentContent>
      <div
        className="ModerateCard-footer"
      >
        <ForwardRef(forwardRef)>
          <div>
            <Localized
              id="moderate-comment-viewContext"
            >
              <withPropsOnChange(TextLinkProps)
                className="ModerateCard-link"
                href="http://localhost/comment"
                target="_blank"
              >
                View Context
              </withPropsOnChange(TextLinkProps)>
            </Localized>
          </div>
          <Relay(MarkersContainer)
            comment={Object {}}
            onUsernameClick={[Function]}
            settings={Object {}}
          />
        </ForwardRef(forwardRef)>
      </div>
    </div>
    <div
      className="ModerateCard-separator ModerateCard-ruledSeparator"
    />
    <ForwardRef(forwardRef)
      alignItems="center"
      className="ModerateCard-aside"
      direction="column"
      itemGutter={true}
    >
      <Localized
        id="moderate-comment-decision"
      >
        <div
          className="ModerateCard-decision"
        >
          DECISION
        </div>
      </Localized>
      <ForwardRef(forwardRef)
        itemGutter={true}
      >
        <RejectButton
          className=""
          disabled={false}
          invert={false}
          onClick={[Function]}
        />
        <ApproveButton
          className=""
          disabled={false}
          invert={false}
          onClick={[Function]}
        />
      </ForwardRef(forwardRef)>
    </ForwardRef(forwardRef)>
  </ForwardRef(forwardRef)>
</withPropsOnChange(Card)>
`;

exports[`renders story info 1`] = `
<withPropsOnChange(Card)
  className="ModerateCard-root"
  data-testid="moderate-comment-comment-id"
>
  <ForwardRef(forwardRef)>
    <div
      className="ModerateCard-mainContainer"
    >
      <div
        className="ModerateCard-topBar"
      >
        <ForwardRef(forwardRef)
          alignItems="center"
        >
          <ForwardRef(forwardRef)
            className="ModerateCard-username"
            onClick={[Function]}
          >
            <Username>
              Theon
            </Username>
          </ForwardRef(forwardRef)>
          <Timestamp
            className="ModerateCard-timestamp"
            toggleAbsolute={true}
          >
            2018-11-29T16:01:51.897Z
          </Timestamp>
          <FeatureButton
            enabled={true}
            featured={false}
            onClick={[Function]}
          />
        </ForwardRef(forwardRef)>
      </div>
      <CommentContent
        bannedWords={
          Array [
            "banned",
          ]
        }
        className="ModerateCard-content"
        suspectWords={
          Array [
            "suspect",
          ]
        }
      >
        content
      </CommentContent>
      <div
        className="ModerateCard-footer"
      >
        <ForwardRef(forwardRef)>
          <div>
            <Localized
              id="moderate-comment-viewContext"
            >
              <withPropsOnChange(TextLinkProps)
                className="ModerateCard-link"
                href="http://localhost/comment"
                target="_blank"
              >
                View Context
              </withPropsOnChange(TextLinkProps)>
            </Localized>
          </div>
          <div>
            <Localized
              id="moderate-comment-story"
            >
              <span
                className="ModerateCard-story"
              >
                Story
              </span>
            </Localized>
            : 
            <span
              className="ModerateCard-storyTitle"
            >
              Cancer cured!
            </span>
             
            <Localized
              id="moderate-comment-moderateStory"
            >
              <withPropsOnChange(TextLinkProps)
                className="ModerateCard-link"
                href="/story"
                onClick={[Function]}
              >
                Moderate Story
              </withPropsOnChange(TextLinkProps)>
            </Localized>
          </div>
          <Relay(MarkersContainer)
            comment={Object {}}
            onUsernameClick={[Function]}
            settings={Object {}}
          />
        </ForwardRef(forwardRef)>
      </div>
    </div>
    <div
      className="ModerateCard-separator ModerateCard-ruledSeparator"
    />
    <ForwardRef(forwardRef)
      alignItems="center"
      className="ModerateCard-aside ModerateCard-asideWithoutReplyTo"
      direction="column"
      itemGutter={true}
    >
      <Localized
        id="moderate-comment-decision"
      >
        <div
          className="ModerateCard-decision"
        >
          DECISION
        </div>
      </Localized>
      <ForwardRef(forwardRef)
        itemGutter={true}
      >
        <RejectButton
          className=""
          disabled={false}
          invert={false}
          onClick={[Function]}
        />
        <ApproveButton
          className=""
          disabled={false}
          invert={false}
          onClick={[Function]}
        />
      </ForwardRef(forwardRef)>
    </ForwardRef(forwardRef)>
  </ForwardRef(forwardRef)>
</withPropsOnChange(Card)>
`;

exports[`renders tombstoned when comment is deleted 1`] = `
<withPropsOnChange(Card)
  className="ModerateCard-root ModerateCard-deleted"
  data-testid="moderate-comment-comment-id"
>
  <ForwardRef(forwardRef)>
    <div
      className="ModerateCard-mainContainer"
    >
      <div
        className="ModerateCard-topBar"
      >
        <ForwardRef(forwardRef)
          alignItems="center"
        >
          <ForwardRef(forwardRef)
            className="ModerateCard-username"
            onClick={[Function]}
          >
            <Username>
              Theon
            </Username>
          </ForwardRef(forwardRef)>
          <Timestamp
            className="ModerateCard-timestamp"
            toggleAbsolute={true}
          >
            2018-11-29T16:01:51.897Z
          </Timestamp>
          <FeatureButton
            enabled={false}
            featured={false}
            onClick={[Function]}
          />
        </ForwardRef(forwardRef)>
      </div>
      <CommentContent
        bannedWords={
          Array [
            "banned",
          ]
        }
        className="ModerateCard-content"
        suspectWords={
          Array [
            "suspect",
          ]
        }
      >
        <Localized
          id="moderate-comment-deleted-body"
        >
          <ForwardRef(forwardRef)>
            This comment is no longer available. The commenter has deleted their account.
          </ForwardRef(forwardRef)>
        </Localized>
      </CommentContent>
      <div
        className="ModerateCard-footer"
      >
        <ForwardRef(forwardRef)>
          <div>
            <Localized
              id="moderate-comment-viewContext"
            >
              <withPropsOnChange(TextLinkProps)
                className="ModerateCard-link"
                href="http://localhost/comment"
                target="_blank"
              >
                View Context
              </withPropsOnChange(TextLinkProps)>
            </Localized>
          </div>
          <Relay(MarkersContainer)
            comment={Object {}}
            onUsernameClick={[Function]}
            settings={Object {}}
          />
        </ForwardRef(forwardRef)>
      </div>
    </div>
    <div
      className="ModerateCard-separator ModerateCard-ruledSeparator"
    />
    <ForwardRef(forwardRef)
      alignItems="center"
      className="ModerateCard-aside ModerateCard-asideWithoutReplyTo"
      direction="column"
      itemGutter={true}
    >
      <Localized
        id="moderate-comment-decision"
      >
        <div
          className="ModerateCard-decision"
        >
          DECISION
        </div>
      </Localized>
      <ForwardRef(forwardRef)
        itemGutter={true}
      >
        <RejectButton
          className=""
          disabled={true}
          invert={false}
          onClick={[Function]}
        />
        <ApproveButton
          className=""
          disabled={true}
          invert={false}
          onClick={[Function]}
        />
      </ForwardRef(forwardRef)>
    </ForwardRef(forwardRef)>
  </ForwardRef(forwardRef)>
</withPropsOnChange(Card)>
`;
